--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
       <div class="col-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_8811.JPG" alt="Jim Rohn" />
+          <img class="book-cover" src="IMG_8811.JPG" alt="Jim Rohn" />
           <div class="book-title">Jim Rohn</div>
           <div class="book-author">by Jim Rohn</div>
           <div class="book-price">$3.50</div>
