--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <!-- Card 1: New Order -->
       <div class="col-3 col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7280.jpeg" alt="Book Cover 1">
+          <img class="book-cover" src="IMG_7280.jpeg" alt="Book Cover 1">
           <div class="book-title">The 48 laws of Power</div>
           <div class="book-author">by Robert Greene</div>
           <div class="book-price">$7.50</div>
@@ -114,7 +114,7 @@
       <!-- Card 2: New Order -->
       <div class="col-3 col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7274.jpeg" alt="Book Cover 2">
+          <img class="book-cover" src="IMG_7274.JPEG" alt="Book Cover 2">
           <div class="book-title">Good Vibe, Good Life</div>
           <div class="book-author">by Vex King</div>
           <div class="book-price">$7.50</div>
