--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- Card 2: New Order -->
       <div class="col-3 col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="IMG_7274.JPEG" alt="Book Cover 2">
+          <img class="book-cover" src="IMG_7274.jpeg" alt="Book Cover 2">
           <div class="book-title">Good Vibe, Good Life</div>
           <div class="book-author">by Vex King</div>
           <div class="book-price">$7.50</div>
@@ -123,7 +123,7 @@
       <!-- Card 3: New Order -->
       <div class="col-3 col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_8811.JPG" alt="Book Cover 3">
+          <img class="book-cover" src="IMG_8811.jpeg" alt="Book Cover 3">
           <div class="book-title">Jim Rohn</div>
           <div class="book-author">By Jim Rohn</div>
           <div class="book-price">$3.50</div>
@@ -132,7 +132,7 @@
       <!-- Remaining Cards from 'books' directory - hidden on xs, visible on sm+ -->
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_3826.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_3826.jpeg" alt="Book Cover">
           <div class="book-title">belive it.</div>
           <div class="book-author">by Napoleon Hill</div>
           <div class="book-price">$6.50</div>
@@ -140,7 +140,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7282.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7282.jpeg" alt="Book Cover">
           <div class="book-title">How to Stop Worrying and Start Living</div>
           <div class="book-author">by Dale Carnegie</div>
           <div class="book-price">$7.00</div>
@@ -148,7 +148,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7281.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7281.jpeg" alt="Book Cover">
           <div class="book-title">The Psychology of Money</div>
           <div class="book-author">by Morgan Housel</div>
           <div class="book-price">$7.00</div>
@@ -156,7 +156,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7279.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7279.jpeg" alt="Book Cover">
           <div class="book-title">Winning with people</div>
           <div class="book-author">by John C.Maxwell</div>
           <div class="book-price">$7.00</div>
@@ -164,7 +164,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7278.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7278.jpeg" alt="Book Cover">
           <div class="book-title">The Secret</div>
           <div class="book-author"></div>
           <div class="book-price">$3.00</div>
@@ -172,7 +172,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7277.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7277.jpeg" alt="Book Cover">
           <div class="book-title">Option B</div>
           <div class="book-author">by Sheryl Sandberg</div>
           <div class="book-price">$6.00</div>
@@ -180,7 +180,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7276.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7276.jpeg" alt="Book Cover">
           <div class="book-title">Rich Dad Poor Dad</div>
           <div class="book-author">by Robert Kiyosaki</div>
           <div class="book-price">$6.25</div>
@@ -188,7 +188,7 @@
       </div>
       <div class="d-none d-sm-block col-sm-6 col-md-4 col-lg-3">
         <div class="book-card-custom">
-          <img class="book-cover" src="books/IMG_7275.jpeg" alt="Book Cover">
+          <img class="book-cover" src="IMG_7275.jpeg" alt="Book Cover">
           <div class="book-title">How to win friends and influence people</div>
           <div class="book-author">by Dale Carnegie</div>
           <div class="book-price">$7.00</div>
